--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "vegetam_assets",
   "version": "0.0.0",
   "devDependencies": {
+    "browser-sync": "^2.10.0",
     "gulp": "~3.9.0",
     "gulp-sass": "^2.0.0",
-    "gulp-sourcemaps": "^1.5.0",
-    "browser-sync": "^2.10.0"
+    "gulp-sourcemaps": "^1.5.0"
   },
   "engines": {
     "node": ">=0.12.0"
+  },
+  "dependencies": {
+    "express": "^4.16.4"
   }
 }
